# CursorMind

./: .gitignore  LICENSE  PROJECT_PROGRESS.md  QUICKSTART.md  README.md  README.zh.md  pyproject.toml  readmetest.md  requirements.txt  setup.py
.cursor/: rules
learning_notes/: stats.json
learning_notes/daily/: 2025-03-12.json
learning_notes/reviews/: review_20250312.json
learning_notes/topics/python/: 2025-03-12-0002.json
learning_notes/topics/test/: 2025-03-12-0001.json
learning_paths/: current_path.json  paths.json
project_management/control/: MAIN_CONTROL.md  REQUIREMENTS.md
project_management/templates/: daily_report_template.md  task_template.md  weekly_report_template.md
src/cursormind/: __init__.py  __main__.py  cli.py
src/cursormind/config/: settings.py
src/cursormind/core/: achievement.py  code_review.py  command_handler.py  cursor_framework.py  learning_path.py  note_manager.py  project_manager.py
src/cursormind/utils/: helpers.py  note_manager.py
