[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cursormind"
version = "0.2.1"
authors = [
    {name = "Yagami"},
]
description = "A project management framework for Cursor developers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2021.3",
]

[project.scripts]
cursormind = "cursormind.cli:main"

[tool.pdm]
package-dir = "src" 